--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,26 @@
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700,800&display=swap" rel="stylesheet">
 </head>
 <body>
-    
+    <header>
+        <nav>
+            <a href="#" id="icon" class="icon">Menú</a>
+            <!--<div class="links one" id="links">
+                <a href="">Inicio</a>
+                <a href="">Acerca de</a>
+                <a href="">Contacto</a>
+            </div>-->
+        </nav>
+        <div class="container">
+            <div class="texts">
+                <h1>Rodrigo Guerra</h1>
+                <h2>Desarrollador Web FullStack</h2>
+                <a href="">Contacto</a>
+            </div>
+            <img src="../assets/images/2798874-3.png" alt="" class="img-rounded">
+        </div>
+    </header>
+    <div class="wave">
+        <div style="height: 150px; overflow: hidden;" ><svg viewBox="0 0 500 150" preserveAspectRatio="none" style="height: 100%; width: 100%;"><path d="M0.00,49.98 C149.99,150.00 349.20,-49.98 500.00,49.98 L500.00,150.00 L0.00,150.00 Z" style="stroke: none; fill: #fff;"></path></svg></div>
+    </div>
 </body>
 </html>
