--- a/src/index.html
+++ b/src/index.html
@@ -12,11 +12,11 @@
     <header>
         <nav>
             <a href="#" id="icon" class="icon">Menú</a>
-            <!--<div class="links one" id="links">
+            <div class="links one" id="links">
                 <a href="">Inicio</a>
                 <a href="">Acerca de</a>
                 <a href="">Contacto</a>
-            </div>-->
+            </div>
         </nav>
         <div class="container">
             <div class="texts">
@@ -30,5 +30,7 @@
     <div class="wave">
         <div style="height: 150px; overflow: hidden;" ><svg viewBox="0 0 500 150" preserveAspectRatio="none" style="height: 100%; width: 100%;"><path d="M0.00,49.98 C149.99,150.00 349.20,-49.98 500.00,49.98 L500.00,150.00 L0.00,150.00 Z" style="stroke: none; fill: #fff;"></path></svg></div>
     </div>
+
+    <script src="../assets/js/all.js"></script>
 </body>
 </html>
